--- a/Code/DealerWebsite/Views/Image/ImageCarousel.cshtml
+++ b/Code/DealerWebsite/Views/Image/ImageCarousel.cshtml
@@ -1,4 +1,4 @@
-﻿<ul class="example-orbit" data-orbit>
+﻿<ul data-orbit>
     <li>
         @Html.Placehold(900, 400, "First Image", null, null, new { alt = "First Image" })
         <div class="orbit-caption">Caption One.</div>
