--- a/Code/DealerWebsite/Views/Shared/_footer.cshtml
+++ b/Code/DealerWebsite/Views/Shared/_footer.cshtml
@@ -3,6 +3,29 @@
         <div class="small-12 medium-4 columns">
             
             <h3 itemprop="name">Company Name</h3>
+
+            <h4>Corporate Office</h4>
+            
+            <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+                <span itemprop="streetAddress">3102 Highway 98</span> <br />
+                <span itemprop="addressLocality">Mexico Beach</span>,
+                <span itemprop="addressRegion">FL</span>
+                <span itemprop="postalCode">94086</span>
+            </div>
+
+            <div>
+                Phone: <span itemprop="telephone">850-648-4200</span>
+            </div>
+
+            <div>
+                Fax: <span itemprop="faxNumber">850-648-4200</span>
+            </div>
+
+            <hr class="show-for-small-only" />
+
+            <h3 itemprop="name">Company Name</h3>
+
+            <h4>Regional Office</h4>
             
             <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
                 <span itemprop="streetAddress">3102 Highway 98</span> <br />
@@ -45,8 +68,6 @@
                     </span>
                 </span>
             </div>
-            
-            <hr class="show-for-small-only" />
         </div>
         <div class="small-12 medium-4 columns">
             <meta itemprop="openingHours" content="Mo-Fr 11:00-14:30">
